<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="vertical"
    >
    <!-- android:clickable="true"属性是为了防止叠层的fragment点击事件穿透问题-->

    <LinearLayout
        android:id="@+id/result_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="15dp"
        >

        <TextView
            android:id="@+id/tv_detail_title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/diagnosis_detail_note"
            android:textColor="@color/color_09cacd"
            android:textSize="@dimen/sp16"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/tv_patient_name"
                style="@style/prescription_gray_style"
                android:text="@string/patient_name"
                />

            <TextView
                android:id="@+id/tv_patient_name_content"
                style="@style/prescription_content"
                android:maxLines="1"
                tools:text="张小文"
                />

            <TextView
                android:id="@+id/tv_patient_gender"
                style="@style/prescription_gray_style"
                android:text="@string/patient_gender"
                />

            <TextView
                android:id="@+id/tv_patient_gender_content"
                style="@style/prescription_content"
                android:maxLines="1"
                tools:text="男"
                />

            <TextView
                android:id="@+id/tv_patient_age"
                style="@style/prescription_gray_style"
                android:text="@string/patient_age"
                />

            <TextView
                android:id="@+id/tv_patient_age_content"
                style="@style/prescription_content"
                android:maxLines="1"
                tools:text="30岁"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/tv_first_diagnose"
                style="@style/prescription_gray_style"
                android:text="@string/first_diagnosis_colon"
                />

            <TextView
                android:id="@+id/tv_first_diagnose_content"
                style="@style/prescription_content"
                android:maxLines="1"
                tools:text="胃炎"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/tv_advice"
                style="@style/prescription_gray_style"
                android:text="@string/parse_advise_colon"
                />

            <TextView
                android:id="@+id/tv_advice_content"
                style="@style/prescription_content"
                android:layout_marginEnd="0dp"
                android:lineSpacingExtra="@dimen/dp10"
                android:maxLength="140"
                android:minLines="1"
                android:layout_marginBottom="15dp"
                android:textSize="@dimen/sp16"
                tools:text="@string/test_long"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tv_prescribe_title"
                style="@style/prescription_gray_style"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/medicine_prescribe_colon"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_prescribe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp10"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:layout_toEndOf="@id/tv_prescribe_title"
                android:visibility="gone"
                tools:listitem="@layout/item_diagnose_prescribe_sheet_content"
                />

            <LinearLayout
                android:id="@+id/ll_consult_record_no_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_norecord"
                    />

                <TextView
                    android:id="@+id/tv_consult_record_no_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checking"
                    />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

<!--    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/icon_close"
        />-->

</RelativeLayout>
