<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rl_container_cancel_chat_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
    android:background="@color/white">
<!--    <View
        android:id="@+id/cyan_circle"
        android:layout_width="@dimen/chat_cancel_circle_size"
        android:layout_height="@dimen/chat_cancel_circle_size"
        android:layout_marginLeft="@dimen/chat_cancel_circle_margin_left"
        android:layout_marginTop="@dimen/chat_cancel_circle_margin_top"
        android:background="@drawable/shape_circle_cyan" />-->



 <!--   <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_doc_avatar"
        android:layout_width="@dimen/chat_cancel_avatar_size"
        android:layout_height="@dimen/chat_cancel_avatar_size"
        android:layout_below="@id/tv_cancel_chat_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp15"
        android:src="@drawable/icon_avatar_doctor"
        app:civ_fill_color="@color/color_d6" />-->

<!--    <RelativeLayout
        android:id="@+id/rl_container_doc_text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/civ_doc_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/content_far_margin"
        android:layout_marginRight="@dimen/content_far_margin"
        android:layout_marginTop="@dimen/dp15">

        <TextView
            android:id="@+id/tv_doc_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_gray_text"
            android:textSize="@dimen/chat_cancel_title_text_size"
            tools:text="叶定维" />

        <TextView
            android:id="@+id/tv_doc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_doc_name"
            android:layout_marginLeft="@dimen/content_close_margin"
            android:layout_toRightOf="@id/tv_doc_name"
            android:textColor="@color/black_gray_text"
            android:textSize="@dimen/chat_cancel_doc_title_text_size"
            tools:text="主任医师" />

    </RelativeLayout>-->

        <TextView
            android:id="@+id/tv_cancel_chat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel_reason_choose"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dp30"
            android:textSize="@dimen/sp18" />
        <RelativeLayout
            android:id="@+id/rl_reason1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:tag="0"
            android:layout_gravity="center_horizontal"
            >
            <ImageView
                android:id="@+id/iv_reason_icon1"
                android:layout_width="@dimen/dp16"
                android:layout_height="@dimen/dp16"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_toLeftOf="@id/tv_reason_content1"
                android:src="@drawable/icon_rb_selected_min"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_reason_content1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/cancel_reason_no_guide"
                android:textColor="@color/selector_gray_cyan_textcolor"
                android:textSize="@dimen/sp16" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_reason2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:tag="1"
            android:layout_gravity="center_horizontal"
          >

            <ImageView
                android:id="@+id/iv_reason_icon2"
                android:layout_width="@dimen/dp16"
                android:layout_height="@dimen/dp16"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_toLeftOf="@+id/tv_reason_content2"
                android:src="@drawable/icon_rb_selected_min"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_reason_content2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/cancel_reason_bad_network"
                android:textColor="@color/selector_gray_cyan_textcolor"
                android:textSize="@dimen/sp16" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_reason3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:tag="2"
            android:layout_gravity="center_horizontal"
            >

            <ImageView
                android:id="@+id/iv_reason_icon3"
                android:layout_width="@dimen/dp16"
                android:layout_height="@dimen/dp16"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_toLeftOf="@+id/tv_reason_content3"
                android:src="@drawable/icon_rb_selected_min"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_reason_content3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/cancel_reason_no_response"
                android:textColor="@color/selector_gray_cyan_textcolor"
                android:textSize="@dimen/sp16" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_reason4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:tag="3"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/iv_reason_icon4"
                android:layout_width="@dimen/dp16"
                android:layout_height="@dimen/dp16"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_toLeftOf="@+id/tv_reason_content4"
                android:src="@drawable/icon_rb_selected_min"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_reason_content4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_reason_bad_image"
                android:layout_centerHorizontal="true"
                android:textColor="@color/selector_gray_cyan_textcolor"
                android:textSize="@dimen/sp16" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_reason5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:tag="4"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/iv_reason_icon5"
                android:layout_width="@dimen/dp16"
                android:layout_height="@dimen/dp16"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp15"
                android:src="@drawable/icon_rb_selected_min"
                android:layout_toLeftOf="@+id/tv_reason_content5"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_reason_content5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_reason_bad_attitude"
                android:textColor="@color/selector_gray_cyan_textcolor"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/sp16" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_reason6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:tag="5"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/iv_reason_icon6"
                android:layout_width="@dimen/dp16"
                android:layout_height="@dimen/dp16"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_toLeftOf="@+id/tv_reason_content6"
                android:src="@drawable/icon_rb_selected_min"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_reason_content6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/cancel_reason_no_help"
                android:textColor="@color/selector_gray_cyan_textcolor"
                android:textSize="@dimen/sp16" />

        </RelativeLayout>
  <View
      android:layout_marginTop="@dimen/dp25"
      style="@style/line_dividing_gray_horizontal_style"
      />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:gravity="center"
            android:textColor="@color/color_09cacd"
            android:textSize="@dimen/sp16" />
       <View
         style="@style/line_dividing_gray_vertical_style"
           android:layout_marginTop="@dimen/dp10"
         android:layout_marginBottom="@dimen/dp10"
           />
        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/submit"
            android:textColor="@color/gray_666"
            android:gravity="center"
            android:textSize="@dimen/sp16" />
    </LinearLayout>

</LinearLayout>